Added childs for ListView and TabHost in audio fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="conformation">OK</string>
     <string name="deny">Cancel</string>
 
+    <string name="CountMusics">Musics</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
