--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,8 @@
     <string name="conformation">OK</string>
     <string name="deny">Cancel</string>
 
-    <string name="CountMusics">Musics</string>
+    <string name="countMusics">Musics</string>
+    <string name="getAudio">Get Audio</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
