--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,10 +10,14 @@
     <string name="conformation">OK</string>
     <string name="deny">Cancel</string>
 
-    <string name="countMusics">Musics</string>
+    <string name="countMusics">Audio Files</string>
     <string name="getAudio">Get Audio</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="new_audio_stack">New Audio Track</string>
+    <string name="mute">Mute</string>
+    <string name="solo">Solo</string>
 
 </resources>
