работают сортировки (на возрастание и убывание) по клику на папку открывает песни папки (есть возможность выбирать песни) поиск там так же работает. кнопки скрываются

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,11 @@
     <string name="path">Patn</string>
     <string name="folder">Folder</string>
 
+    <string-array name="spinner_array">
+        <item>TITLE</item>
+        <item>ARTIST</item>
+        <item>DURATION</item>
+        <item>ALBUM</item>
+    </string-array>
+
 </resources>
