--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,5 +133,5 @@
     <string name="phaser">Phaser</string>
     <string name="equalizer">Equalizer</string>
 
-
+    <string name="track_not_selected">A track must be selected!</string>
 </resources>
