--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,10 +14,11 @@
     <string name="select_audio_files">Select the audio files!</string>
 
     <!-- Menu -->
-    <string name="menu_import">Import songs</string>
-    <string name="menu_export">Export song</string>
+    <string name="menu_import">Import audio</string>
+    <string name="menu_export">Export audio</string>
     <string name="menu_language">Language</string>
     <string name="menu_close">Close project</string>
+    <string name="menu_editing">Edit</string>
     <!-- end Menu -->
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -30,6 +31,13 @@
     <string name="action_settings">Settings</string>
     <string name="action_effects">Effects</string>
     <string name="action_import">Import</string>
+    <string name="action_copy">Copy</string>
+    <string name="action_paste">Paste</string>
+    <string name="action_remove">Remove</string>
+    <string name="action_cut">Cut</string>
+
+    <string name="action_move">Hand</string>
+    <string name="action_select">Selection</string>
 
     <string name="conformation">OK</string>
     <string name="cancel">Cancel</string>
