1) по центру имортировать музыку шоб 2) строка на всех языках экспортування 4) добавить обработку всех эффектов 5) отключать эффкты добавлять вырезать вставлять, выделение, кнопка пальчик оставить(методы лок и анлок) 7) анимация viewpager android animation 8) по двойному клику на проект открывать 9) по клику на настройку подсвечивает 10) оставить нужные форматы 11) убрать линейку, когда нет проектов

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -24,6 +24,8 @@
     <string name="navigation_drawer_open">Открыть панель навигации</string>
     <string name="navigation_drawer_close">Закрыть панель навигации</string>
 
+    <string name="encoding">Экспортирование...</string>
+    <string name="please_import_some_audio">Пожалуйста, импортируйте аудио.</string>
     <string name="navigation_swipe_open_project">Проведите по экрану, чтобы открыть сущ. проект.</string>
     <string name="navigation_swipe_create_project">Проведите по экрану, чтобы создать новый проект.</string>
     <string name="create_a_new_project">Создать новый проект</string>
